# nrf52833-rust

./: Cargo.toml  README.md
src/: main.rs
